--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<title>{{ page.title }} &middot; {{ site.name }}</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" href="http://localhost/code/bootstrap/3.1.1/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="{{ site.assets }}/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="{{ site.assets }}/css/style.css" />
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
