add logo header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,9 @@
 			</header>
 
 			<div class="content container">
-				<div class="page-header text-centers">
+				<br />
+				<div class="text-center"><img src="{{ site.assets}}/img/shriram.png" style="max-width:100%;" /></div>
+				<div class="page-header">
 					<h1>{{ page.title }}</h1>
 					<h1>Call <span class="highlight">{{ site.contact }}</span></h1>
 				</div>
