--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,11 @@ h1, h2, h3, .font1, .font1 * {
 
 h1 {
 	color: #FFD700 !important;
+	font-size: 45px;
+}
+
+.page-header {
+	margin-top: 0;
 }
 
 .content.container {
